<resources>
    <string name="app_name">CheckingHomework</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_login_screen">Open</string>
    <string name="hint_username_input">Username</string>
    <string name="hint_password_input">Password</string>
    <string name="register_text">Don’t have an account?\n<u>Sign up</u></string>
    <string name="hint_email_input">Email</string>
    <string name="hint_password_again_input">Repeat password</string>
    <string name="log_in_text">Already have an account?\n<u>Log in</u></string>
    <string name="item_news">News</string>
    <string name="item_videos">Videos</string>
    <string name="item_chat">Chat</string>
    <string name="ifo_text">This app is made by two jojo fans, just for fun. If it gives you pregnancy, diarrhea, then you can go the fuck out of here. My name is Kira Yoshikage. IM 33 years old. My house is located in the northeastern part of Morioh, in the estate area. I work in the office of the Kame Yu chain of stores and return home at the latest at eight in the evening. I dont smoke, I drink occasionally. I go to bed at 11pm and make sure I get exactly eight hours of sleep no matter what. Before going to bed, I drink warm milk, and also spend about twenty minutes warming up, so I sleep until the morning without any problems. I wake up in the morning feeling neither tired nor stressed, like a baby. At the physical examination, they told me that there were no problems. Im trying to convey that Im an ordinary person who wants to live a quiet life. I dont worry about problems like winning or losing, and I dont make enemies that keep me awake. I know for sure: in this way of interacting with society lies happiness. Though if I had to fight, I wouldnt lose to anyone.</string>
    <string name="agree">Agree</string>

    <string name="features_list">• breaking news \n• video player \n• chat</string>
    <string name="tech_stack_list">• Navigation component \n• Room \n• Retrofit \n• Hilt \n• ExoPlayer </string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
</resources>