<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_list"
        tools:context=".ui.screens.login.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.2"
            android:contentDescription="TODO"
            android:scaleType="centerCrop"
            android:src="@drawable/bg"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/inputs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/inter_semibold"
                android:hint="@string/hint_username_input"
                android:inputType="text|textCapSentences"
                android:minHeight="56dp"
                android:paddingStart="20dp"
                android:textColor="@color/dark"
                android:textColorHint="@color/light_gray"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="20sp"
                tools:ignore="Autofill,RtlSymmetry" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edit_text"
                android:fontFamily="@font/inter_semibold"
                android:hint="@string/hint_password_input"
                android:inputType="textPassword"
                android:minHeight="56dp"
                android:paddingStart="20dp"
                android:textColor="@color/dark"
                android:textColorHint="@color/light_gray"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="20sp"
                tools:ignore="Autofill,RtlSymmetry" />
        </LinearLayout>

        <com.example.checkinghomework.ui.custom.CustomButton
            android:id="@+id/button"
            style="@style/Widget.CustomButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="60dp"
            android:layout_marginBottom="50dp"
            app:enabled="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputs_layout"
            app:text="Log in" />

        <TextView
            android:id="@+id/sign_up_text_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:background="@drawable/text_background"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/register_text"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>